--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -1,10 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
-CAN.BS1=CAN_BS1_9TQ
-CAN.BS2=CAN_BS2_8TQ
-CAN.CalculateTimeQuantum=1000.0
+CAN.BS1=CAN_BS1_13TQ
+CAN.BS2=CAN_BS2_2TQ
+CAN.CalculateTimeQuantum=125.0
 CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
 CAN.Mode=CAN_MODE_LOOPBACK
-CAN.Prescaler=48
+CAN.Prescaler=1
 CAN.RFLM=ENABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -19,23 +19,31 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PB14
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=PA11
-Mcu.Pin6=PA12
-Mcu.Pin7=PB6
-Mcu.Pin8=PB7
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin0=PA3
+Mcu.Pin1=PA4
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA15
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin2=PB0
+Mcu.Pin3=PB1
+Mcu.Pin4=PB2
+Mcu.Pin5=PB10
+Mcu.Pin6=PB11
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA9
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
-NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -52,14 +60,64 @@ PA12.GPIOParameters=GPIO_PuPd
 PA12.GPIO_PuPd=GPIO_PULLDOWN
 PA12.Mode=Master
 PA12.Signal=CAN_TX
-PA2.Locked=true
-PA2.Signal=GPXTI2
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=TEMP1
+PA15.Locked=true
+PA15.Signal=S_TIM2_CH1_ETR
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA3.GPIO_Label=TEMP2
+PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.Locked=true
-PA3.Signal=GPXTI3
+PA3.Signal=S_TIM2_CH4
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=TEMP_SOC
+PA4.GPIO_PuPd=GPIO_NOPULL
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA4.Locked=true
+PA4.PinState=GPIO_PIN_RESET
+PA4.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=ID0
+PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=ID1
+PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=ID3
+PB10.GPIO_PuPd=GPIO_PULLDOWN
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=CELL_ALERT
+PB11.Locked=true
+PB11.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LED0
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LED1
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB2.GPIO_Label=ID2
+PB2.GPIO_PuPd=GPIO_PULLDOWN
+PB2.Locked=true
+PB2.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=TEMP3
+PB3.Locked=true
+PB3.Signal=S_TIM2_CH2
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=TEMP4
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -94,29 +152,32 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
-RCC.AHBFreq_Value=48000000
-RCC.APB1Freq_Value=48000000
-RCC.APB1TimFreq_Value=48000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
+RCC.AHBFreq_Value=8000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.FCLKCortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
+RCC.HCLKFreq_Value=8000000
 RCC.HSICECFreq_Value=32786.88524590164
-RCC.I2SFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=48000000
+RCC.I2SFreq_Value=8000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=8000000
 RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
-RCC.SYSCLKFreq_VALUE=48000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
-RCC.TimSysFreq_Value=48000000
-RCC.USART1Freq_Value=48000000
+RCC.SYSCLKFreq_VALUE=8000000
+RCC.TimSysFreq_Value=8000000
+RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4
+SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1
+SH.S_TIM3_CH1.ConfNb=1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
