--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -18,8 +18,9 @@ Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP8=TIM14
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
@@ -37,6 +38,7 @@ Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PB0
 Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin3=PB1
 Mcu.Pin4=PB2
 Mcu.Pin5=PB10
@@ -44,7 +46,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA9
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -56,6 +58,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA10.Mode=Asynchronous
@@ -189,6 +192,9 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
 SH.S_TIM3_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=AutoReloadPreload
+TIM14.IPParameters=Prescaler,Period
+TIM14.Period=60000
+TIM14.Prescaler=4000
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
@@ -204,6 +210,8 @@ USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
