--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -3,7 +3,7 @@ CAN.BS1=CAN_BS1_13TQ
 CAN.BS2=CAN_BS2_2TQ
 CAN.CalculateTimeQuantum=1000.0
 CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2,RFLM,Mode
-CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Mode=CAN_MODE_NORMAL
 CAN.Prescaler=1
 CAN.RFLM=ENABLE
 File.Version=6
@@ -18,34 +18,33 @@ Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
-Mcu.IP8=TIM14
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
 Mcu.Pin1=PA4
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA15
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PB0
-Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin3=PB1
-Mcu.Pin4=PB2
-Mcu.Pin5=PB10
-Mcu.Pin6=PB11
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA9
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA15
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PA5
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB2
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PB14
+Mcu.Pin9=PB15
 Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -58,7 +57,6 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA10.Mode=Asynchronous
@@ -87,6 +85,10 @@ PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=nALARM
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -192,9 +194,6 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
 SH.S_TIM3_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=AutoReloadPreload
-TIM14.IPParameters=Prescaler,Period
-TIM14.Period=60000
-TIM14.Prescaler=4000
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
@@ -210,8 +209,6 @@ USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
