--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -1,8 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 CAN.BS1=CAN_BS1_13TQ
 CAN.BS2=CAN_BS2_2TQ
+CAN.CalculateBaudRate=62500
+CAN.CalculateTimeBit=16000.00
 CAN.CalculateTimeQuantum=1000.0
-CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,RFLM,Mode,BS2
+CAN.IPParameters=CalculateTimeQuantum,Prescaler,BS1,RFLM,Mode,BS2,CalculateTimeBit,CalculateBaudRate
 CAN.Mode=CAN_MODE_NORMAL
 CAN.Prescaler=1
 CAN.RFLM=ENABLE
@@ -22,36 +24,38 @@ Mcu.IP8=USART1
 Mcu.IPNb=9
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA3
-Mcu.Pin1=PA4
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA15
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=PB9
-Mcu.Pin2=PA5
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB2
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=24
+Mcu.Pin0=PF0-OSC_IN
+Mcu.Pin1=PF1-OSC_OUT
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA15
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB6
+Mcu.Pin2=PA3
+Mcu.Pin20=PB7
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PB0
+Mcu.Pin6=PB1
+Mcu.Pin7=PB2
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.0
+MxDb.Version=DB.6.0.10
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -63,12 +67,12 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_PuPd
-PA11.GPIO_PuPd=GPIO_PULLDOWN
-PA11.Mode=Master
+PA11.GPIO_PuPd=GPIO_PULLUP
+PA11.Mode=CAN_Activate
 PA11.Signal=CAN_RX
 PA12.GPIOParameters=GPIO_PuPd
-PA12.GPIO_PuPd=GPIO_PULLDOWN
-PA12.Mode=Master
+PA12.GPIO_PuPd=GPIO_PULLUP
+PA12.Mode=CAN_Activate
 PA12.Signal=CAN_TX
 PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=TEMP1
@@ -142,6 +146,10 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=BQ_POWER
 PB9.Locked=true
 PB9.Signal=GPIO_Input
+PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Mode=HSE-External-Oscillator
+PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -152,12 +160,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F042C6Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -181,10 +189,11 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=1000000
 RCC.HSICECFreq_Value=32786.88524590164
 RCC.I2SFreq_Value=8000000
-RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSourceVirtual,SYSCLKFreq_VALUE,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=8000000
 RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=1000000
 RCC.USART1Freq_Value=1000000
