--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -37,16 +37,17 @@ Mcu.Pin15=PA12
 Mcu.Pin16=PA15
 Mcu.Pin17=PB3
 Mcu.Pin18=PB4
-Mcu.Pin19=PB6
+Mcu.Pin19=PB5
 Mcu.Pin2=PA3
-Mcu.Pin20=PB7
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PB0
@@ -54,7 +55,7 @@ Mcu.Pin6=PB1
 Mcu.Pin7=PB2
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
@@ -142,6 +143,10 @@ PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=TEMP4
 PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=TEMP5
+PB5.Locked=true
+PB5.Signal=S_TIM3_CH2
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
@@ -212,6 +217,8 @@ SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
 SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Input_Capture2_from_TI2
+SH.S_TIM3_CH2.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.IPParameters=AutoReloadPreload,Prescaler
 TIM1.Prescaler=24
@@ -230,9 +237,10 @@ TIM2.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4,Channel-Input_Capture2_from_TI2,ICPolarity_CH2,Channel-Input_Capture1_from_TI1,ICPolarity_CH1
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM3.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
-TIM3.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1,Prescaler
-TIM3.Prescaler=150
+TIM3.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1,Prescaler,Channel-Input_Capture2_from_TI2
+TIM3.Prescaler=880
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
