--- a/software/QUTMS_BMS.ioc
+++ b/software/QUTMS_BMS.ioc
@@ -239,8 +239,9 @@ TIM2.IPParameters=Channel-Input_Capture4_from_TI4,ICPolarity_CH4,Channel-Input_C
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM3.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
-TIM3.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1,Prescaler,Channel-Input_Capture2_from_TI2
-TIM3.Prescaler=880
+TIM3.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM3.IPParameters=Channel-Input_Capture1_from_TI1,ICPolarity_CH1,Prescaler,Channel-Input_Capture2_from_TI2,ICPolarity_CH2
+TIM3.Prescaler=999
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
